--- a/app/src/main/res/layout/activity_kitchen.xml
+++ b/app/src/main/res/layout/activity_kitchen.xml
@@ -7,12 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.myeasykitchen.myeasykitchen.KitchenActivity">
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/add_grocery_item"
+        android:layout_weight=".9"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Item"
+        android:id="@+id/add_grocery_item"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </LinearLayout>
