--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -12,17 +12,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="204dp"
-        android:layout_marginEnd="204dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Name:"
         android:id="@+id/name_label"
@@ -52,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/name_text"
+        android:hint="Name"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -72,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/quantity_text"
+        android:hint="Quantity"
         android:layout_alignTop="@+id/quantity_label"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -94,6 +85,7 @@
         android:inputType="date"
         android:ems="10"
         android:id="@+id/date_text"
+        android:hint="Expiration Date"
         android:layout_below="@+id/quantity_text"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
