--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Item"
-        android:id="@+id/add_button"
+        android:id="@+id/add_grocery_item"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
