--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main3"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_grocery"
@@ -15,7 +20,7 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/add_button" />
+        android:layout_above="@+id/add_grocery_item" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,3 +30,28 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
+
+    <LinearLayout
+        android:layout_gravity="left"
+        android:orientation="vertical"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:background="#ffeeeeee">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/user_lists"
+            android:scrollbars="vertical"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/logout"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:text="Logout"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="15dp" />
+
+    </LinearLayout>
+</android.support.v4.widget.DrawerLayout>
