--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -39,7 +39,12 @@
         android:background="#ffeeeeee">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/user_lists"
+            android:id="@+id/kitchen_lists"
+            android:scrollbars="vertical"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/grocery_lists"
             android:scrollbars="vertical"
             android:layout_width="240dp"
             android:layout_height="wrap_content"/>
