--- a/app/src/main/res/layout/grocery_item_row.xml
+++ b/app/src/main/res/layout/grocery_item_row.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        <CheckBox
+            android:id="@+id/check_items"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"/>
 
-        <TextView android:id="@+id/grocery_item_name"
+        <TextView android:id="@+id/name"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
@@ -18,16 +22,6 @@
             android:textSize="22dp"
             android:textColor="#000000"/>
 
-        <CheckBox
-            android:id="@+id/check_items"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hi"
-            android:checked="false"
-            />
 
-    </RelativeLayout>
 
 </LinearLayout>
