--- a/app/src/main/res/layout/fragment_item_menu.xml
+++ b/app/src/main/res/layout/fragment_item_menu.xml
@@ -4,21 +4,21 @@
     android:layout_height="match_parent" android:layout_gravity="center">
 
     <TextView
+        android:id="@+id/edit_item"
+        android:text="Edit"
+        android:textSize="15dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="0dp"
+        android:layout_width="200dp"
+        android:layout_height="30dp" />
+    <TextView
         android:id="@+id/remove_item"
         android:text="Remove"
         android:textSize="15dp"
         android:layout_margin="16dp"
         android:layout_width="200dp"
         android:layout_height="30dp" />
-    <TextView
-        android:id="@+id/edit_item"
-        android:text="Edit"
-        android:textSize="15dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
