--- a/app/src/main/res/layout/grocery_item_row.xml
+++ b/app/src/main/res/layout/grocery_item_row.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <CheckBox
             android:id="@+id/check_items"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"/>
+            android:checked="false" />
 
         <TextView android:id="@+id/name"
-            android:layout_alignParentLeft="true"
+            android:layout_toRightOf="@id/check_items"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:textStyle="bold"
             android:textSize="22dp"
             android:textColor="#000000"/>
+    </RelativeLayout>
 
-
+    <LinearLayout
+        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        ></LinearLayout>
 
 </LinearLayout>
