--- a/app/src/main/res/layout/grocery_item_row.xml
+++ b/app/src/main/res/layout/grocery_item_row.xml
@@ -24,6 +24,16 @@
             android:paddingBottom="4dp"
             android:textSize="22dp"
             android:textColor="#000000"/>
+
+        <TextView android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:textSize="12dp"
+            android:textColor="#000000"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp" />
     </RelativeLayout>
 
     <LinearLayout
