--- a/app/src/main/res/layout/kitchen_item_row.xml
+++ b/app/src/main/res/layout/kitchen_item_row.xml
@@ -14,6 +14,24 @@
             android:textColor="#000000"
             android:paddingTop="4dp"
             android:paddingBottom="4dp" />
+        <TextView android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:textSize="12dp"
+            android:textColor="#000000"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp" />
+        <TextView android:id="@+id/expiration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:textSize="12dp"
+            android:textColor="#000000"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp" />
     </RelativeLayout>
 
     <LinearLayout
