--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -32,8 +32,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remove Checked"
-        android:id="@+id/remove_all"
+        android:text="Import All"
+        android:id="@+id/import_all"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
